--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="limiter">
-  <div class="container-login100" style="background-image: url('../../../../assets/images/bg-01.jpg');">
+  <div class="container-login100" style="background-image: url('../../../../assets/images/bg-03.jpg');">
       <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
         <form class="login100-form" autocomplete="off" [formGroup]="registerForm" (ngSubmit)="register()">
             <span class="login100-form-title p-b-49">
@@ -10,7 +10,7 @@
                 <span class="label-input100">Nickname</span>
                 <input class="input100"
                       type="text"
-                      formControlName="name"
+                      formControlName="nickname"
                       placeholder="Introduce a nickname">
                 <span class="focus-input100"></span>
             </div>
@@ -49,7 +49,7 @@
                     ¿Already have an account?
                 </span>
 
-                <a routerLink="/auth/login" class="txt2">
+                <a routerLink="/auth/login" class="txt2" style="cursor:pointer">
                     Login here
                 </a>
             </div>
