Header added with a simple Logout link for ease

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div style="background: gray; height: 50px; position:fixed; top:0; left:0; width:100%">
+  <a routerLink="/auth/login" class="txt2" (click)="logout()">
+    Logout
+  </a>
+</div>
