--- a/src/styles.css
+++ b/src/styles.css
@@ -149,7 +149,7 @@ button:hover {
 }
 
 .wrap-login100 {
-  width: 500px;
+  min-width: 500px;
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
