Fixed Main Container padding

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<form class="w-full" autocomplete="off" [formGroup]="loginForm" (ngSubmit)="login()">
+<form class="w-full pt-[65px]" autocomplete="off" [formGroup]="loginForm" (ngSubmit)="login()">
     <span class="block text-[39px] text-[#333333] leading-tight text-center font-['Poppins-Bold'] pb-[49px]">
         Login
     </span>
