--- a/src/app/game/loser/loser.component.html
+++ b/src/app/game/loser/loser.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center text-3xl mb-8">Most Losing Player</h1>
+<h1 class="text-center text-3xl mb-8 pt-[65px]">Most Losing Player</h1>
 <ng-container *ngIf="!loading; else isLoading">
     <ng-container *ngIf="user; else noThrows">
         <div class="bg-white shadow overflow-hidden sm:rounded-lg">
