--- a/src/app/game/play/play.component.html
+++ b/src/app/game/play/play.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center text-3xl mb-6">Throw the dices</h1>
+<h1 class="text-center text-3xl mb-6 pt-[65px]">Throw the dices</h1>
 
 <div *ngIf="!thrown" class="text-gray-400">
     <h4 class="mt-2">Press the play button to throw the dices!</h4>
