--- a/src/app/game/ranking/ranking.component.html
+++ b/src/app/game/ranking/ranking.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center text-3xl mb-8">Ranking</h1>
+<h1 class="text-center text-3xl mb-8 pt-[65px]">Ranking</h1>
 <ng-container *ngIf="result; else elseTemplate">
     <ng-container *ngIf="isNumber(result); else noThrows">
         <span class="text-gray-500">
