--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<form class="w-full" autocomplete="off" [formGroup]="registerForm" (ngSubmit)="register()">
+<form class="w-full pt-[65px]" autocomplete="off" [formGroup]="registerForm" (ngSubmit)="register()">
     <span class="block text-[39px] text-[#333333] leading-tight text-center font-['Poppins-Bold'] pb-[49px]">
         Register
     </span>
