--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="w-full mx-auto">
   <div class="w-full min-h-screen flex flex-wrap justify-center items-center p-[15px] bg-center" style="background-image: url('../../../../assets/images/bg-03.jpg');">
-      <div class="min-w-[500px] bg-white rounded-[10px] overflow-hidden px-[55px] pt-[65px] pb-[54px]">
+      <div class="min-w-[500px] bg-white rounded-[10px] overflow-hidden px-[55px] pb-[54px] relative">
         <router-outlet></router-outlet>
       </div>
   </div>
