--- a/src/app/game/play/play.component.html
+++ b/src/app/game/play/play.component.html
@@ -6,7 +6,7 @@
     <h5 class="mt-1">If you get any other result, you will win.</h5>
 </div>
 
-<div *ngIf="thrown" style="margin-top: 50px">
+<div *ngIf="thrown" class="mt-[50px]">
     <div class="flex mb-8">
         <img src="../../../assets/images/dices/b-{{lastThrow.black_dice}}.png" alt="" class="m-auto">
         <img src="../../../assets/images/dices/r-{{lastThrow.red_dice}}.png" alt="" class="m-auto">
