Error Page Ready

--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,1 +1,9 @@
-<p>error-page works!</p>
+<div class="text-8xl pt-12 text-gray-600 text-center">404</div>
+<div class="text-4xl text-center text-gray-500 mb-8">Not Found</div>
+
+<div class="wrap-login100-form-btn !w-fit">
+    <div class="login100-form-bgbtn"></div>
+    <button class="login100-form-btn" routerLink="/">
+        Take me back home
+    </button>
+</div>
