Modified JwPagination in Throws & Player List

--- a/src/app/game/player-list/player-list.component.html
+++ b/src/app/game/player-list/player-list.component.html
@@ -39,7 +39,9 @@
             </tbody>
         </table>
     </div>
-    <jw-pagination [items]="players" (changePage)="onChangePage($event)"></jw-pagination>
+    <div class="flex justify-center">
+        <jw-pagination [items]="players" (changePage)="onChangePage($event)"></jw-pagination>
+    </div>
 </ng-container>
 <ng-template #elseTemplate>
     Loading..
