--- a/src/app/game/player-list/player-list.component.html
+++ b/src/app/game/player-list/player-list.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-center text-3xl mb-6 pt-[30px]">Player list</h1>
 <ng-container *ngIf="!loading; else elseTemplate">
-    <div class="relative overflow-x-auto shadow-md sm:rounded-lg mb-4">
+    <div class="overflow-x-auto shadow-md sm:rounded-lg mb-4">
         <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
             <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
