--- a/src/app/game/throws/throws.component.html
+++ b/src/app/game/throws/throws.component.html
@@ -1,7 +1,7 @@
-<div class="relative">
+<div class="relative" id="throws-container">
     <h1 class="text-center text-3xl mb-2 pt-[30px]">Throws</h1>
-    <ng-container *ngIf="throws.length > 0; else isLoading" class="relative">
-        <svg routerLink="/user/delete/throws/{{getUserId()}}" xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-red-600 absolute top-10 right-0 bg-gray-400/40 rounded-lg p-[5px] cursor-pointer hover:bg-gray-400/80" fill="none" viewBox="0 0 24 24" stroke="currentColor" title="fuck you">
+    <ng-container *ngIf="throws.length > 0; else isLoading">
+        <svg routerLink="/user/delete/throws/{{getUserId()}}" xmlns="http://www.w3.org/2000/svg" id="trash" class="h-10 w-10 text-red-600 absolute top-10 right-0 bg-gray-400/40 rounded-lg p-[5px] cursor-pointer hover:bg-gray-400/80" fill="none" viewBox="0 0 24 24" stroke="currentColor" title="fuck you">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
             <title>Delete all throws</title>
         </svg>
@@ -9,7 +9,7 @@
             Your winning percentage is
             <strong [ngClass]="winningPercentage >= 50 ? 'text-green-600' : 'text-red-600'">{{winningPercentage}}</strong>
         </span>
-        <div class="relative overflow-x-auto shadow-md sm:rounded-lg mb-4">
+        <div class="overflow-x-auto shadow-md sm:rounded-lg mb-4">
             <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
