--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,68 @@
-<div style="background: gray; height: 50px; position:fixed; top:0; left:0; width:100%">
-  <a routerLink="/auth/login" class="txt2" (click)="logout()">
-    Logout
-  </a>
+<div class="dark fixed w-full top-0 left-0">
+    <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-neutral-800 border-b-[2px] border-neutral-600 relative">
+        <div class="flex flex-wrap justify-between items-center mx-auto">
+            <a routerLink="/" class="flex items-center">
+                <img src="../../../assets/images/dice.png" class="mr-3 h-6 sm:h-9" alt="diceApp Logo">
+                <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">diceApp</span>
+            </a>
+            <div class="flex md:order-2">
+                <button type="button" routerLink="/play"
+                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Play</button>
+                <button data-collapse-toggle="mobile-menu-4" type="button" id="mobileMenu" (click)="mobileMenu()"
+                    class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    aria-controls="mobile-menu-4" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                    <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                </button>
+            </div>
+            <div class="hidden mt-[3px] z-10 justify-between items-center w-full md:flex md:w-auto md:order-1 dark:bg-neutral-800" id="mobile-menu-4">
+                <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+                    <li>
+                        <a routerLink="/play" routerLinkActive="!text-white"
+                            class="block py-2 pr-4 pl-3 text-gray-700 bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:hover:text-white dark:text-gray-400"
+                            aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a routerLink="/throws/{{this.authService.getUser?.id}}" routerLinkActive="!text-white"
+                            class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Throws</a>
+                    </li>
+                    <li>
+                        <a routerLink="/ranking/loser" routerLinkActive="!text-white"
+                            class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Most Losing Player</a>
+                    </li>
+                    <li>
+                        <a routerLink="/ranking/winner" routerLinkActive="!text-white"
+                            class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Most Winning Player</a>
+                    </li>
+                    <!-- Admin Block -->
+                    <li>
+                        <a routerLink="/ranking" routerLinkActive="!text-white" [routerLinkActiveOptions]="{exact: true}"
+                            class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Ranking</a>
+                    </li>
+                    <li>
+                        <a routerLink="/players" routerLinkActive="!text-white"
+                            class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Player List</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="font-['Poppins-Regular'] text-white absolute top-[60px] right-0 bg-neutral-800 pt-2 pl-4 pr-4 border-b-[2px] border-neutral-600 border-l-[2px] rounded-bl-lg">
+            <div>
+                Welcome <strong routerLink="/user/update/{{this.authService.getUser?.id}}" class="animate-[pulse_1s_ease-in-out] cursor-pointer text-neutral-400 hover:text-neutral-500">{{this.authService.getUser?.nickname}}</strong>
+            </div>
+            <a class="font-['Poppins-Bold'] text-[16px] cursor-pointer float-right" (click)="logout()">
+                Logout
+            </a>
+        </div>
+    </nav>
 </div>
