Fix Specifications for winning the game

--- a/src/app/game/play/play.component.html
+++ b/src/app/game/play/play.component.html
@@ -2,8 +2,8 @@
 
 <div *ngIf="!thrown" class="text-gray-400">
     <h4 class="mt-2">Press the play button to throw the dices!</h4>
-    <h5 class="mt-4">If you get a 7 between the both dices, you lose.</h5>
-    <h5 class="mt-1">If you get any other result, you will win.</h5>
+    <h5 class="mt-4">If you get a 7 between the both dices, you win.</h5>
+    <h5 class="mt-1">If you get any other result, you will lose.</h5>
 </div>
 
 <div *ngIf="thrown" class="mt-[50px]">
